ECS-9.1 User entity created